@startuml
!include Style.puml

skinparam linetype ortho
skinparam nodesep 100
skinparam SameClassWidth true
hide empty members

class CardsList CARDSLIST_COLOR_PRIMARY

CardsList -right--> "         1 "/"history" CardsHistory

CardsHistory -right-> "          0..*"/"historyList" \n\nCardHistoryEntry\n\n

\n\nCardHistoryEntry\n\n --> "1  "/"  cardHistoryType" CardHistoryType

enum CardHistoryType <<enumeration>> {
    ADDED
    REMOVED
    MODIFIED
    ENTIRE
}

\n\nCardHistoryEntry\n\n -right--> "0..1      "/"current" \n\nCard\n\n : ""
\n\nCardHistoryEntry\n\n -right--> "0..1      "/previous \n\nCard\n\n : ""
}
@enduml